# OAIP_labs

./: .gitignore  Task_7
LR1/: Task_3.cpp  Task_3.odg
LR2/Task_1/: Task_1.cpp
LR2/Task_10/: Task_10.cpp
LR2/Task_11/: Task_11.cpp
LR2/Task_2/: Task_2.cpp
LR2/Task_3/: Task_3  Task_3.cpp
LR2/Task_4/: Task_4  Task_4.cpp
LR2/Task_5/: Task_5.cpp
LR2/Task_6/: Task_6  Task_6.cpp
LR2/Task_7/: Task_7.cpp
LR2/Task_8/: Task_8  Task_8.cpp
LR2/Task_9/: Task_9  Task_9.cpp
LR3/: .~lock.Task_4_full_scheme.odg#  Task_1.h  Task_2.h  Task_3.h  Task_4.h  Task_4_full_scheme.odg  Task_4_scheme.odg  Task_5.h  Task_5_full_cheme.odg  Task_6.h  Task_7.h  Task_8.h  check_cin_func.h  check_cin_header.h  main  main.cpp
LR4/part_c/: compile_commands.json  main  main.c  run_main.sh
LR4/part_c/.cache/clangd/index/: check_input.c.8444614F1308F6B0.idx  check_input.h.267FDB45F65B5C93.idx  main.c.99A838A19E5159D2.idx  run_tasks_c.c.FF4F99B1463DCCCC.idx  run_tasks_c.h.F65B8932A996C901.idx  task_4.c.EBB9AAD6DDE2A220.idx  task_4.h.1E4782E08967C760.idx  task_5.c.460948779129E841.idx  task_5.h.FE9BB46B9E5F4C3F.idx  task_6.c.772BE1D3D1EAF081.idx  task_6.h.757ED744B0DDCFDD.idx
LR4/part_c/blockschemes/: task_4.odg  task_5.odg  task_6.odg
LR4/part_c/functions/: check_input.c  run_tasks_c.c  task_4.c  task_5.c  task_6.c
LR4/part_c/headers/: check_input.h  run_tasks_c.h  task_4.h  task_5.h  task_6.h
LR4/part_cpp/: main  main.cpp  run_main.sh
LR4/part_cpp/functions/: run_tasks.cpp  task_1.cpp  task_2.cpp  task_3.cpp
LR4/part_cpp/headers/: check_cin_func.h  run_tasks.h  task_1.h  task_2.h  task_3.h
LR4/part_cpp/scripts_for_tests/: run_test_1.sh  run_test_2.sh  run_test_3.sh
LR4/part_cpp/tests/: test_task_1.cpp  test_task_2.cpp  test_task_3.cpp
LR5/: main.cpp  run_main.sh
LR5/include/: task_1.h  task_2.h  task_3.h  task_4.h  task_5.h
LR5/scripts_for_tests/: run_all_tests.sh  run_test_1.sh  run_test_2.sh  run_test_3.sh  run_test_4.sh  run_test_5.sh
LR5/sources/: task_1.cpp  task_2.cpp
LR5/src/: run_tasks.cpp  task_3.cpp  task_4.cpp  task_5.cpp
LR5/tests/: test_task_1.cpp  test_task_2.cpp  test_task_3.cpp  test_task_4.cpp  test_task_5.cpp
LR6/: CMakeLists.txt  main.cpp  run_all_tests.sh
LR6/blockschemes/: task_1.odg  task_2.odg  task_3.odg
LR6/include/: MyStr.h  c_str_utils.h  check_cin.h  run_tasks.h  task_1.h  task_2.h  task_3.h
LR6/src/: MyStr.cpp  c_str_utils.cpp  run_tasks.cpp  task_1.cpp  task_2.cpp  task_3.cpp
LR6/tests/: test_task_1.cpp  test_task_2.cpp  test_task_3.cpp
LR7/: CMakeLists.txt  main.cpp
LR7/include/: check_cin.h  run_tasks.h  task_1.h  task_2.h  task_3.h  task_4.h  task_5.h
LR7/src/: run_tasks.cpp  task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp
LR8/: CMakeLists.txt
LR8/include/: airport.h  input_utils.h  railway_station.h
LR8/rust/src/: main.rs
LR8/rust/src/airport/: mod.rs
LR8/rust/src/input_utils/: mod.rs
LR8/src/: airport.c  input_utils.c  railway_station.c
LR8/src/tasks/: task_1.c  task_2.c
LR9/: CMakeLists.txt  main.cpp
LR9/src/: MainWindow.cpp  MainWindow.h  MovingLocomotive.cpp  MovingLocomotive.h  MovingRectangle.cpp  MovingRectangle.h  MovingWheel.cpp  MovingWheel.h  SmokeParticle.cpp  SmokeParticle.h
LR9_second/: CMakeLists.txt  main.cpp
LR9_second/src/: Circle.cpp  Circle.h  GraphicsView.cpp  GraphicsView.h  Hexagon.cpp  Hexagon.h  MainWindow.cpp  MainWindow.h  Polygon.cpp  Polygon.h  Rectangle.cpp  Rectangle.h  Rhombus.cpp  Rhombus.h  Shape.cpp  Shape.h  Square.cpp  Square.h  Star.cpp  Star.h  Triangle.cpp  Triangle.h
LR_3/: Task_1.cpp
untitled/: CMakeLists.txt
